styling changes, routing changes

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alynealvarenga.github.io/trackYourWorkout/",
   "name": "workout-demo",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.9.1",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-contenteditable": "^3.3.3",
     "react-dom": "^16.12.0",
@@ -21,6 +23,8 @@
     "uuid": "^7.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
